# agentic-eval

./: README.md  pyproject.toml
dashboard/: __init__.py  app.py
dashboard/pages/: comparison.py  overview.py  security.py  trajectory.py
docs/: adapters.md  architecture.md  cli.md  comparison.md  custom-metrics.md  dashboard.md  getting-started.md  integration-guide.md  metrics.md  security.md  skill-format.md
src/agentic_eval/: __init__.py  agent_evaluator.py  api.py  cli.py  config.py  decorators.py  models.py  skill_parser.py  store.py  tracer.py
src/agentic_eval/adapters/: __init__.py  gemini_adapter.py  langchain_adapter.py  langfuse_adapter.py  langgraph_adapter.py  mlflow_adapter.py  openai_adapter.py  otel_adapter.py
src/agentic_eval/evaluators/: __init__.py  comparator.py  security.py  skill_adherence.py
src/agentic_eval/judges/: __init__.py  llm_judge.py  rule_judge.py
src/agentic_eval/metrics/: __init__.py  base.py  error_recovery.py  grounding.py  output_correctness.py  step_deviation.py  task_completion.py  tool_response_alignment.py  tool_selection.py  trajectory_optimality.py
src/scora/: __init__.py  agent_evaluator.py  api.py  cli.py  config.py  decorators.py  models.py  store.py  tracer.py
src/scora/adapters/: __init__.py  gemini_adapter.py  langchain_adapter.py  langfuse_adapter.py  langgraph_adapter.py  mlflow_adapter.py  openai_adapter.py  otel_adapter.py
src/scora/evaluators/: __init__.py
src/scora/judges/: __init__.py  llm_judge.py
src/scora/metrics/: __init__.py  base.py
src/skora/: __init__.py  agent_evaluator.py  api.py  assertions.py  cli.py  config.py  decorators.py  models.py  store.py  tracer.py
src/skora/adapters/: __init__.py  gemini_adapter.py  langchain_adapter.py  langfuse_adapter.py  langgraph_adapter.py  mlflow_adapter.py  openai_adapter.py  otel_adapter.py
src/skora/evaluators/: __init__.py
src/skora/integrations/: __init__.py  skillsaw.py  skillspector.py
src/skora/judges/: __init__.py  llm_judge.py
src/skora/metrics/: __init__.py  action_economy.py  base.py  hallucination.py  instruction_fidelity.py
tests/: test_adapters.py  test_api.py  test_async.py  test_bug_regressions.py  test_comparator.py  test_config.py  test_decorator_advanced.py  test_decorators.py  test_evaluators.py  test_gemini_adapter.py  test_integrations.py  test_langfuse_adapter.py  test_langgraph_adapter.py  test_metrics.py  test_mlflow_adapter.py  test_skill_parser.py  test_trajectory_metrics.py
