[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-eval"
version = "0.1.0"
description = "Trajectory-based evaluation framework for AI agent skills"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Biswajit Satapathy", email = "bsatapat@redhat.com" },
]
keywords = ["ai", "agent", "evaluation", "skill", "trajectory", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.0",
    "pandas>=2.0",
]
all = [
    "agentic-eval[llm]",
    "agentic-eval[dashboard]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
agentic-eval = "agentic_eval.cli:main"

[project.urls]
Homepage = "https://github.com/bsatapat-jpg/agentic-eval"
Repository = "https://github.com/bsatapat-jpg/agentic-eval"
Issues = "https://github.com/bsatapat-jpg/agentic-eval/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_eval", "dashboard"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
