[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scora"
version = "0.1.0"
description = "SCORA — Skill Compliance, Observability, Rating & Analysis for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Biswajit Satapathy", email = "bsatapat@redhat.com" },
]
keywords = ["ai", "agent", "evaluation", "skill", "trajectory", "llm", "scora"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.0",
    "pandas>=2.0",
]
all = [
    "scora[llm]",
    "scora[dashboard]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
scora = "scora.cli:main"

[project.urls]
Homepage = "https://github.com/bsatapat-jpg/scora"
Repository = "https://github.com/bsatapat-jpg/scora"
Issues = "https://github.com/bsatapat-jpg/scora/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scora", "dashboard"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
