[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skora"
version = "0.1.0"
description = "SKORA — Skill Knowledge, Observability, Rating & Analysis for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Biswajit Satapathy", email = "bsatapat@redhat.com" },
]
keywords = ["ai", "agent", "evaluation", "skill", "trajectory", "llm", "skora"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.0",
    "pandas>=2.0",
]
quality = [
    "skillsaw>=0.14",
]
security = [
    # skillspector is not on PyPI — install from GitHub:
    # pip install git+https://github.com/NVIDIA/SkillSpector.git
]
tools = [
    "skora[quality]",
    # skora[security] requires manual install of skillspector (see above)
]
all = [
    "skora[llm]",
    "skora[dashboard]",
    "skora[quality]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
skora = "skora.cli:main"

[project.urls]
Homepage = "https://github.com/bsatapat-jpg/skora"
Repository = "https://github.com/bsatapat-jpg/skora"
Issues = "https://github.com/bsatapat-jpg/skora/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skora", "dashboard"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
